syntax = "proto3";

option csharp_namespace = "GRPCLibrary";

service GameSystemModel {
  rpc Login (UserModel) returns (UserModel);
  rpc Logout (UserModel) returns (UserModel);
  rpc PostGame (GameModel) returns (GameModel);
  rpc PostCover (CoverModel) returns (CoverModel);
  rpc GetGames (EmptyRequest) returns (GamesModel);
  rpc GetCoverSize (CoverRequest) returns (CoverSize);
  rpc GetCover (CoverRequest) returns (CoverModel);
  rpc GetUsers (EmptyRequest) returns (UsersModel);
  rpc PostReview (GameModel) returns (GameModel);
  rpc ToModify (GameModel) returns (GameModel);
  rpc UpdateGame (GamesModel) returns (GameModel);
  rpc DeleteGame (GameModel) returns (GameModel);
  rpc AcquireGame (GameModel) returns (GameModel);
  rpc RemoveAcquireGame (GameModel) returns (GameModel);
  rpc GetAcquiredGames (UserModel) returns (GamesModel);
  rpc PostUser (UserModel) returns (UserModel);
  rpc UpdateUser (UsersModel) returns (UserModel);
  rpc DeleteUser (UserModel) returns (UserModel);
  rpc UpdateGameWithTitle (GameModifyModel) returns (GameModel);
  rpc UpdateUserWithName (UserModifyModel) returns (UserModel);
}

message UserModel {
	int32 id = 1;
	string name = 2;
	bool login = 3;
	repeated GameModel games = 4;
}

message UserModifyModel {
	int32 id = 1;
	string name = 2;
	bool login = 3;
	repeated GameModel games = 4;
	string nameUserToModify = 5;
}

message GameModel {
	int32 id = 1;
	string title = 2;
	string genre = 3;
	int32 rating = 4;
	string synopsis = 5;
	string cover = 6;
	repeated ReviewModel reviews = 7;
	string user = 8;
	int32 code = 9;
}

message GameModifyModel {
	int32 id = 1;
	string title = 2;
	string genre = 3;
	int32 rating = 4;
	string synopsis = 5;
	string cover = 6;
	string user = 8;
	string titleGameToModify = 9;
	repeated ReviewModel reviews = 10;
}

message ReviewModel {
	int32 id = 1;
	int32 rating = 2;
	string comment = 3;
}

message CoverModel {
	string fileName = 1;
	bytes data = 2;
}

message CoverRequest {
	string cover = 1;
	sint64 part = 2;
	sint64 offset = 3;
}

message CoverSize {
	sint64 size = 1;
}

message GamesModel {
	repeated GameModel games = 1;
}

message UsersModel {
	repeated UserModel users = 1;
}

message EmptyRequest {}